--- a/cr_model.ipynb
+++ b/cr_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "eb612a93",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "id": "dc2c064d",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "id": "9f93216e",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "id": "49a9674a",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "id": "3330b4ae",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "id": "3b781c72",
    "metadata": {},
    "outputs": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "id": "a4f14260",
    "metadata": {},
    "outputs": [
@@ -981,7 +981,7 @@
        "[8 rows x 37 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "id": "d40b213d",
    "metadata": {},
    "outputs": [
@@ -1170,7 +1170,7 @@
        "[4 rows x 43 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "id": "b78b089e",
    "metadata": {},
    "outputs": [
@@ -1555,7 +1555,7 @@
        "[11 rows x 80 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "id": "948c0ff2",
    "metadata": {},
    "outputs": [
@@ -1856,7 +1856,7 @@
        "[8 rows x 38 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1867,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "id": "da9ff032",
    "metadata": {},
    "outputs": [
@@ -2045,7 +2045,7 @@
        "[4 rows x 43 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "id": "23e34f0e",
    "metadata": {},
    "outputs": [
@@ -2430,7 +2430,7 @@
        "[11 rows x 81 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2457,7 +2457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "id": "dbe8c8c1",
    "metadata": {},
    "outputs": [
@@ -2486,7 +2486,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2506,7 +2506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "id": "8a6865d4",
    "metadata": {},
    "outputs": [
@@ -2516,7 +2516,7 @@
        "np.int64(7829)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2543,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "id": "5dbdb72f",
    "metadata": {},
    "outputs": [],
@@ -2572,7 +2572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "id": "20928988",
    "metadata": {},
    "outputs": [],
@@ -2609,7 +2609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "id": "d1577b71",
    "metadata": {},
    "outputs": [],
@@ -2647,7 +2647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "id": "07a2ccde",
    "metadata": {},
    "outputs": [],
@@ -2666,7 +2666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 64,
    "id": "bdb7ef54",
    "metadata": {},
    "outputs": [
@@ -2676,7 +2676,7 @@
        "Series([], dtype: int64)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2712,7 +2712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 65,
    "id": "fc17b624",
    "metadata": {},
    "outputs": [
@@ -3145,7 +3145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 66,
    "id": "ae697bd3",
    "metadata": {},
    "outputs": [],
@@ -3165,7 +3165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 67,
    "id": "5a4a0fa4",
    "metadata": {},
    "outputs": [],
@@ -3181,7 +3181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 68,
    "id": "ae1574c5",
    "metadata": {},
    "outputs": [
@@ -3584,7 +3584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "0156f890",
    "metadata": {},
    "outputs": [],
@@ -3596,7 +3596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "fdbf039d",
    "metadata": {},
    "outputs": [],
@@ -3623,7 +3623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
    "id": "c99360fa",
    "metadata": {},
    "outputs": [],
@@ -3645,7 +3645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 72,
    "id": "555ed02a",
    "metadata": {},
    "outputs": [
@@ -3655,7 +3655,7 @@
        "Text(0.5, 1.0, 'Histogram Sebelum Standardisasi')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3680,7 +3680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 73,
    "id": "e1193f78",
    "metadata": {},
    "outputs": [
@@ -3690,7 +3690,7 @@
        "Text(0.5, 1.0, 'Histogram Setelah Standardisasi')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3722,7 +3722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 74,
    "id": "af0bfe38",
    "metadata": {},
    "outputs": [
@@ -3757,7 +3757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "87419f9c",
    "metadata": {},
    "outputs": [],
@@ -3787,7 +3787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 76,
    "id": "b80c42bd",
    "metadata": {},
    "outputs": [
@@ -4161,7 +4161,7 @@
        "[557 rows x 39 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4197,7 +4197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "37e4f344",
    "metadata": {},
    "outputs": [
@@ -4584,7 +4584,7 @@
        "[557 rows x 216 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4628,7 +4628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 78,
    "id": "947192ac",
    "metadata": {},
    "outputs": [
@@ -5002,7 +5002,7 @@
        "[557 rows x 77 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5047,7 +5047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 79,
    "id": "c676f27d",
    "metadata": {},
    "outputs": [
@@ -5253,7 +5253,7 @@
        "[5 rows x 77 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5272,7 +5272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 80,
    "id": "7d08b3d0",
    "metadata": {},
    "outputs": [
@@ -5312,7 +5312,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5340,7 +5340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 81,
    "id": "0762748e",
    "metadata": {},
    "outputs": [
@@ -5402,7 +5402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 82,
    "id": "55fb985e",
    "metadata": {},
    "outputs": [
@@ -5467,7 +5467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "id": "5c29f528",
    "metadata": {},
    "outputs": [
@@ -5512,7 +5512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
    "id": "e7c8ae94",
    "metadata": {},
    "outputs": [
@@ -5577,6 +5577,116 @@
    "metadata": {},
    "source": [
     "# Data Splitting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "878e095e",
+   "metadata": {},
+   "source": [
+    "Pada kesempatan kali ini Anda akan belajar membagi dataset menggunakan fungsi Train Test Split (holdout method) dari library SKLearn. Ke depannya Anda juga akan mempelajari metode lainnya yang sudah diberi tahu pada sub modul data splitting. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "75fb641b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53c1366f",
+   "metadata": {},
+   "source": [
+    "Selanjutnya, Anda harus memiliki data yang akan dibagi. Data ini bisa berupa DataFrame atau array yang berisi fitur (X) dan label/target (y). Pada kasus ini, kita sudah memiliki sebuah dataset yang disimpan pada variabel df_lencoder sehingga Anda hanya perlu memisahkan antara atribut dan label pada dataset tersebut."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "8f02db70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# memishakkan fitur dan target variable (x dan y)\n",
+    "X = df_lencoder.drop(columns=['SalePrice'])\n",
+    "y = df_lencoder['SalePrice']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e5aa687",
+   "metadata": {},
+   "source": [
+    "Untuk membagi dataset menjadi train set dan test set, kita bisa menggunakan fungsi train_test_split. Fungsi ini memerlukan beberapa parameter utama:\n",
+    "\n",
+    "- X: kumpulan atribut atau fitur dari dataset, yaitu semua kolom kecuali kolom target (pada kasus ini SalePrice).\n",
+    "- y: target atau label yang akan kita prediksi merupakan kolom yang ingin kita pisahkan (pada kasus ini SalePrice).\n",
+    "- test_size: persentase dari data yang akan digunakan sebagai test set. Misalnya, ketika Anda menentukan test_size=0.2, 20% dari data akan menjadi test set, dan 80% sisanya akan menjadi train set.\n",
+    "- random_state: parameter yang memastikan pemisahan data yang konsisten setiap kali fungsi tersebut dijalankan. Parameter ini mengontrol pengacakan saat membagi dataset sehingga dengan menetapkan random_state hasil pembagian data (train set dan test set) akan selalu sama. Hal ini penting untuk memastikan eksperimen yang dapat direproduksi dan evaluasi model yang konsisten. Namun, parameter ini juga dapat memiliki kekurangan yaitu model tidak akan menerima inputan baru yang mungkin akan lebih baik dari sebelumnya."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "eddce3f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    " \n",
+    "# membagi dataset menjadi training dan testing \n",
+    "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a45b014",
+   "metadata": {},
+   "source": [
+    "Ketika Anda menjalankan train_test_split, fungsi ini akan mengembalikan empat bagian data seperti berikut.\n",
+    "\n",
+    "- X_train: fitur untuk train set.\n",
+    "- X_test: fitur untuk test set.\n",
+    "- y_train: target untuk train set.\n",
+    "- y_test: target untuk test set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77adebb5",
+   "metadata": {},
+   "source": [
+    "Sangat mudah ‘kan? Tentunya dengan menggunakan metode holdout ini akan mempermudah eksplorasi yang Anda lakukan. Setelah splitting, Anda dapat menggunakan x_train dan y_train untuk melatih model, serta x_test dan y_test untuk menguji kinerjanya. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "73541354",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jumlah data:  557\n",
+      "Jumlah data latih:  445\n",
+      "Jumlah data test:  112\n"
+     ]
+    }
+   ],
+   "source": [
+    "# menghitung panjang/jumlah data \n",
+    "print(\"Jumlah data: \",len(X))\n",
+    "# menghitung panjang/jumlah data pada x_train\n",
+    "print(\"Jumlah data latih: \",len(x_train))\n",
+    "# menghitung panjang/jumlah data pada x_test\n",
+    "print(\"Jumlah data test: \",len(x_test))\n"
    ]
   }
  ],
